# straylight-os-public

./: .clang-format  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  README.md  SECURITY.md  SUPPORT.md
apps/app-cli/: CMakeLists.txt  main.cpp
apps/audio_mixer/: CMakeLists.txt  main.cpp  mixer.cpp  mixer.h  pipewire_client.cpp  pipewire_client.h
apps/backup/: CMakeLists.txt  engine.cpp  engine.h  main.cpp  scheduler.cpp  scheduler.h  ui.cpp  ui.h
apps/browser/: CMakeLists.txt  downloads.cpp  downloads.h  engine.cpp  engine.h  main.cpp  tab_manager.cpp  tab_manager.h
apps/browser/tests/: CMakeLists.txt  browser_test.cpp
apps/clipboard/: CMakeLists.txt  history.cpp  history.h  main.cpp  watcher.cpp  watcher.h
apps/color-gui/: CMakeLists.txt  color_panel.cpp  color_panel.h  main.cpp
apps/encryption/: CMakeLists.txt  crypto.cpp  crypto.h  keyring.cpp  keyring.h  main.cpp  ui.cpp  ui.h
apps/greeter/: CMakeLists.txt  auth.cpp  auth.h  main.cpp  session.cpp  session.h  ui.cpp  ui.h
apps/image_viewer/: CMakeLists.txt  loader.cpp  loader.h  main.cpp  thumbnails.cpp  thumbnails.h  viewer.cpp  viewer.h
apps/media_library/: CMakeLists.txt  catalog.cpp  catalog.h  main.cpp  scanner.cpp  scanner.h  thumbnailer.cpp  thumbnailer.h
apps/player/: CMakeLists.txt  main.cpp  playback.cpp  playback.h  playlist.cpp  playlist.h  visualizer.cpp  visualizer.h
apps/power-gui/: CMakeLists.txt  main.cpp  power_panel.cpp  power_panel.h
apps/widgets/: CMakeLists.txt  main.cpp  widget_registry.cpp  widget_registry.h
apps/widgets/hpc/: cluster_map.cpp  cluster_map.h  job_queue.cpp  job_queue.h  network_topology.cpp  network_topology.h  power_monitor.cpp  power_monitor.h  resource_allocator.cpp  resource_allocator.h
apps/widgets/ml/: gpu_hud.cpp  gpu_hud.h  inference_monitor.cpp  inference_monitor.h  model_browser.cpp  model_browser.h  tensor_inspector.cpp  tensor_inspector.h  training_dashboard.cpp  training_dashboard.h
apps/widgets/research/: dataset_browser.cpp  dataset_browser.h  experiment_tracker.cpp  experiment_tracker.h  paper_notes.cpp  paper_notes.h  quantum_circuit.cpp  quantum_circuit.h  snn_visualizer.cpp  snn_visualizer.h
apps/widgets/system/: cpu_topology.cpp  cpu_topology.h  entropy_pool.cpp  entropy_pool.h  io_latency.cpp  io_latency.h  memory_pressure.cpp  memory_pressure.h  scheduler_view.cpp  scheduler_view.h
apps/wizard/: CMakeLists.txt  firstboot.cpp  firstboot.h  main.cpp
apps/wizard/pages/: ide_setup.cpp  ide_setup.h  layout_config.cpp  layout_config.h  ml_setup.cpp  ml_setup.h  summary.cpp  summary.h  theme_picker.cpp  theme_picker.h  tour.cpp  tour.h
lib/common/: CMakeLists.txt
lib/common/include/straylight/: common.h  config.h  daemon.h  error.h  export.h  imgui_theme.h  ipc.h  ipc_client.h  log.h  result.h  types.h  version.h  widget.h
lib/common/src/: config.cpp  daemon.cpp  ipc.cpp  log.cpp
lib/hw/: CMakeLists.txt
lib/hw/include/straylight/hw/: entropy.h  (+4 more)
lib/hw/src/: entropy.cpp  gpu.cpp  mgpu.cpp
lib/ml/: CMakeLists.txt
lib/ml/src/: graph.cpp  kv_cache.cpp  tensor.cpp
lib/net/: CMakeLists.txt
lib/net/src/: socket.cpp  transport.cpp
services/alice/: CMakeLists.txt  alert_manager.cpp  alert_manager.h  alice_daemon.cpp  alice_daemon.h  alice_engine.cpp  alice_engine.h  ipc_server.cpp  ipc_server.h  log_analyzer.cpp  log_analyzer.h  main.cpp
services/autotune/: CMakeLists.txt  autotune_daemon.cpp  autotune_daemon.h  hardware_probe.cpp  hardware_probe.h  main.cpp  profiles.cpp  profiles.h  tuner.cpp  tuner.h
services/backup-scheduler/: CMakeLists.txt  backup_engine.cpp  backup_engine.h  main.cpp
services/backup-scheduler/etc/straylight/: backup.conf
services/bridge/: CMakeLists.txt  bridge_engine.cpp  bridge_engine.h  main.cpp  network_sync.cpp  network_sync.h  page_tracker.cpp  page_tracker.h
services/fabric/: CMakeLists.txt  main.cpp  query_engine.cpp  query_engine.h  topology.cpp  topology.h  udev_monitor.cpp  udev_monitor.h
services/firstboot/: CMakeLists.txt  hwdetect.cpp  hwdetect.h  hwdetect_main.cpp  straylight-firstboot  straylight-firstboot.service  straylight-hwdetect.service  straylight-oobe-check  straylight-oobe.service  straylight-wizard-check  straylight-wizard.service
services/fuse/: CMakeLists.txt  fusion_engine.cpp  fusion_engine.h  main.cpp  monitor.h  shared_region.h
services/ghost/: CMakeLists.txt  main.cpp  migration_engine.cpp  migration_engine.h  page_server.cpp  page_server.h  process_restore.cpp  process_restore.h
services/health/: CMakeLists.txt  checks.cpp  checks.h  health_scorer.cpp  health_scorer.h  main.cpp
services/health/etc/straylight/: health.conf
services/hooks/: CMakeLists.txt  hook_engine.cpp  hook_engine.h  main.cpp
services/hooks/etc/straylight/: hooks.conf
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  service_graph.h  test_boot_sequence.cpp  test_daemon_startup.cpp  test_firstboot_script.sh
tests/unit/apps/: CMakeLists.txt  test_oobe_state.cpp  test_pam_auth.cpp  test_widgets.cpp  test_wizard_state.cpp
tests/unit/common/: CMakeLists.txt  test_config.cpp  test_error.cpp  test_ipc.cpp  test_log.cpp  test_result.cpp
tests/unit/compositor/: CMakeLists.txt  test_ipc_compositor.cpp  test_tiling.cpp  test_workspace.cpp
tests/unit/hw/: CMakeLists.txt  test_entropy.cpp  test_gpu.cpp  test_mgpu.cpp
tests/unit/ml/: CMakeLists.txt  test_graph.cpp  test_kv_cache.cpp  test_tensor.cpp
tests/unit/net/: CMakeLists.txt  test_socket.cpp  test_transport.cpp
tests/unit/shell/: CMakeLists.txt  test_theme_engine.cpp  test_top_bar.cpp
tests/unit/subsystems/: CMakeLists.txt  test_agent_queue.cpp  test_bus.cpp  test_compiler.cpp  test_core.cpp  test_dpdk.cpp  test_enclave_attestation.cpp  test_entropy_daemon.cpp  test_fuse.cpp  test_fuse_compression.cpp  test_morph.cpp  test_photonics.cpp  test_pmem.cpp  test_quantum.cpp  test_rdma.cpp  test_registry.cpp  test_rhem.cpp  test_scheduler.cpp  test_snn.cpp  test_xdp.cpp
tests/unit/widgets/: test_widget_registry.cpp
(+1034 files in other folders)
