cmake_minimum_required(VERSION 3.25)
project(straylight VERSION 1.0.0 LANGUAGES CXX C)

# CMake module path — provides FindWaylandProtocols and other custom find modules
list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")

# C++20 required
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# Include shared cmake modules
include(cmake/StraylightVersion.cmake)
include(cmake/StraylightCommon.cmake)
include(GNUInstallDirs)

# Build options
option(BUILD_TESTS "Build test suite" ON)
option(BUILD_COMPOSITOR "Build Wayland compositor" OFF)
option(BUILD_SHELL "Build desktop shell" ON)
option(BUILD_APPS "Build built-in applications" ON)
option(BUILD_SUBSYSTEMS "Build subsystem binaries" ON)
option(BUILD_EXOTIC "Build exotic networking subsystems (XDP/DPDK/RDMA)" ON)

option(STRAYLIGHT_BUILD_LIBS_ONLY "Build only shared StrayLight libraries" OFF)
option(STRAYLIGHT_BUILD_CORE_ONLY "Build only core package targets" OFF)
option(STRAYLIGHT_BUILD_COMPOSITOR_ONLY "Build only compositor package targets" OFF)
option(STRAYLIGHT_BUILD_DESKTOP_ONLY "Build only desktop package targets" OFF)
option(STRAYLIGHT_BUILD_ML_ONLY "Build only ML package targets" OFF)
option(STRAYLIGHT_BUILD_NETWORK_ONLY "Build only network package targets" OFF)
option(STRAYLIGHT_BUILD_EXOTIC_ONLY "Build only exotic package targets" OFF)

set(STRAYLIGHT_PACKAGE_COMPONENT_BUILD OFF)
if(STRAYLIGHT_BUILD_LIBS_ONLY OR
   STRAYLIGHT_BUILD_CORE_ONLY OR
   STRAYLIGHT_BUILD_COMPOSITOR_ONLY OR
   STRAYLIGHT_BUILD_DESKTOP_ONLY OR
   STRAYLIGHT_BUILD_ML_ONLY OR
   STRAYLIGHT_BUILD_NETWORK_ONLY OR
   STRAYLIGHT_BUILD_EXOTIC_ONLY)
    set(STRAYLIGHT_PACKAGE_COMPONENT_BUILD ON)
endif()

if(STRAYLIGHT_BUILD_LIBS_ONLY)
    set(BUILD_TESTS OFF CACHE BOOL "Build test suite" FORCE)
    set(BUILD_COMPOSITOR OFF CACHE BOOL "Build Wayland compositor" FORCE)
    set(BUILD_SHELL OFF CACHE BOOL "Build desktop shell" FORCE)
    set(BUILD_APPS OFF CACHE BOOL "Build built-in applications" FORCE)
    set(BUILD_SUBSYSTEMS OFF CACHE BOOL "Build subsystem binaries" FORCE)
    set(BUILD_EXOTIC OFF CACHE BOOL "Build exotic networking subsystems" FORCE)
elseif(STRAYLIGHT_BUILD_CORE_ONLY OR STRAYLIGHT_BUILD_ML_ONLY)
    set(BUILD_TESTS OFF CACHE BOOL "Build test suite" FORCE)
    set(BUILD_COMPOSITOR OFF CACHE BOOL "Build Wayland compositor" FORCE)
    set(BUILD_SHELL OFF CACHE BOOL "Build desktop shell" FORCE)
    set(BUILD_APPS OFF CACHE BOOL "Build built-in applications" FORCE)
    set(BUILD_SUBSYSTEMS ON CACHE BOOL "Build subsystem binaries" FORCE)
    set(BUILD_EXOTIC OFF CACHE BOOL "Build exotic networking subsystems" FORCE)
elseif(STRAYLIGHT_BUILD_NETWORK_ONLY OR STRAYLIGHT_BUILD_EXOTIC_ONLY)
    set(BUILD_TESTS OFF CACHE BOOL "Build test suite" FORCE)
    set(BUILD_COMPOSITOR OFF CACHE BOOL "Build Wayland compositor" FORCE)
    set(BUILD_SHELL OFF CACHE BOOL "Build desktop shell" FORCE)
    set(BUILD_APPS OFF CACHE BOOL "Build built-in applications" FORCE)
    set(BUILD_SUBSYSTEMS ON CACHE BOOL "Build subsystem binaries" FORCE)
    set(BUILD_EXOTIC ON CACHE BOOL "Build exotic networking subsystems" FORCE)
elseif(STRAYLIGHT_BUILD_COMPOSITOR_ONLY)
    set(BUILD_TESTS OFF CACHE BOOL "Build test suite" FORCE)
    set(BUILD_COMPOSITOR ON CACHE BOOL "Build Wayland compositor" FORCE)
    set(BUILD_SHELL ON CACHE BOOL "Build desktop shell" FORCE)
    set(BUILD_APPS OFF CACHE BOOL "Build built-in applications" FORCE)
    set(BUILD_SUBSYSTEMS OFF CACHE BOOL "Build subsystem binaries" FORCE)
    set(BUILD_EXOTIC OFF CACHE BOOL "Build exotic networking subsystems" FORCE)
elseif(STRAYLIGHT_BUILD_DESKTOP_ONLY)
    set(BUILD_TESTS OFF CACHE BOOL "Build test suite" FORCE)
    set(BUILD_COMPOSITOR OFF CACHE BOOL "Build Wayland compositor" FORCE)
    set(BUILD_SHELL OFF CACHE BOOL "Build desktop shell" FORCE)
    set(BUILD_APPS ON CACHE BOOL "Build built-in applications" FORCE)
    set(BUILD_SUBSYSTEMS OFF CACHE BOOL "Build subsystem binaries" FORCE)
    set(BUILD_EXOTIC OFF CACHE BOOL "Build exotic networking subsystems" FORCE)
endif()

# Output directories
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

# Shared libraries
add_subdirectory(lib/common)
add_subdirectory(lib/ml)
add_subdirectory(lib/net)
add_subdirectory(lib/hw)

# Subsystem daemons
if(BUILD_SUBSYSTEMS)
    if(STRAYLIGHT_BUILD_CORE_ONLY)
        add_subdirectory(bin/bus)
        add_subdirectory(bin/registry)
        add_subdirectory(bin/entropy)
        add_subdirectory(bin/scheduler)
        add_subdirectory(tools/numa)
        add_subdirectory(bin/core)
    elseif(STRAYLIGHT_BUILD_ML_ONLY)
        add_subdirectory(bin/agent)
        add_subdirectory(bin/compiler)
        add_subdirectory(bin/morph)
        add_subdirectory(bin/snn)
        add_subdirectory(bin/rhem)
    elseif(STRAYLIGHT_BUILD_NETWORK_ONLY)
        add_subdirectory(bin/xdp)
        add_subdirectory(bin/dpdk)
        add_subdirectory(bin/rdma_bus)
    elseif(STRAYLIGHT_BUILD_EXOTIC_ONLY)
        add_subdirectory(bin/photonics)
        add_subdirectory(bin/quantum)
        add_subdirectory(bin/pmem)
        add_subdirectory(bin/enclave)
        add_subdirectory(bin/fuse)
    else()
        add_subdirectory(bin/bus)
        add_subdirectory(bin/registry)
        add_subdirectory(bin/entropy)
        add_subdirectory(bin/scheduler)
        add_subdirectory(tools/numa)
        add_subdirectory(bin/core)
        add_subdirectory(bin/agent)
        add_subdirectory(bin/compiler)
        add_subdirectory(bin/morph)
        add_subdirectory(bin/snn)
        add_subdirectory(bin/rhem)
        if(BUILD_EXOTIC)
            add_subdirectory(bin/xdp)
            add_subdirectory(bin/dpdk)
            add_subdirectory(bin/rdma_bus)
            add_subdirectory(bin/photonics)
            add_subdirectory(bin/quantum)
            add_subdirectory(bin/pmem)
        endif()
        add_subdirectory(bin/enclave)
        add_subdirectory(bin/fuse)
        add_subdirectory(services/alice)
        add_subdirectory(tools/alice-cli)
        add_subdirectory(tools/snapshot)
        add_subdirectory(tools/sandbox)
        add_subdirectory(services/replay)
        add_subdirectory(tools/replay-cli)
        add_subdirectory(tools/bench)
        add_subdirectory(tools/vault)
        add_subdirectory(tools/probe)
        add_subdirectory(services/autotune)
        add_subdirectory(services/thermal)
        add_subdirectory(services/cron)
        add_subdirectory(tools/cron-cli)
        add_subdirectory(tools/migrate)
        add_subdirectory(services/health)
        add_subdirectory(tools/health-cli)
        add_subdirectory(services/mesh)
        add_subdirectory(services/fabric)
        add_subdirectory(services/flux)
        add_subdirectory(tools/flux-cli)
        add_subdirectory(tools/trace)
        add_subdirectory(services/lens)
        add_subdirectory(tools/lens-cli)
        add_subdirectory(services/splice)
        add_subdirectory(tools/splice-cli)
        add_subdirectory(services/hooks)
        add_subdirectory(tools/hooks-cli)
        add_subdirectory(services/backup-scheduler)
        add_subdirectory(tools/backup-cli)
        add_subdirectory(services/secrets)
        add_subdirectory(tools/secrets-cli)
        add_subdirectory(tools/timeline)
        add_subdirectory(tools/garden)
        add_subdirectory(tools/capsule)
        add_subdirectory(services/nerve)
        add_subdirectory(tools/nerve-cli)
        add_subdirectory(tools/echo)
        add_subdirectory(services/weave)
        add_subdirectory(tools/weave-cli)
        add_subdirectory(tools/fonts)
        add_subdirectory(tools/color)
        add_subdirectory(services/notify)
        add_subdirectory(tools/notify-cli)
        add_subdirectory(tools/disk)
        add_subdirectory(services/intent)
        add_subdirectory(services/predict)
        add_subdirectory(tools/predict-cli)
        add_subdirectory(services/policy)
        add_subdirectory(services/quota)
        add_subdirectory(services/power)
        add_subdirectory(tools/power-cli)
        add_subdirectory(services/whisper)
        add_subdirectory(tools/boot)
        add_subdirectory(tools/display)
        add_subdirectory(tools/input)
        add_subdirectory(services/audio)
        add_subdirectory(tools/audio-cli)
        add_subdirectory(tools/network)
        add_subdirectory(tools/update)
        add_subdirectory(tools/log)
        add_subdirectory(tools/users)
        add_subdirectory(services/voice)
        add_subdirectory(tools/voice-cli)
    endif()
endif()

# Small standalone tools that don't require subsystems/compositor/shell/apps.
if(NOT STRAYLIGHT_PACKAGE_COMPONENT_BUILD)
    add_subdirectory(tools/neurolinkd-cli)
endif()

# Compositor
if(BUILD_COMPOSITOR)
    add_subdirectory(compositor)
endif()

# Shell and extensions
if(BUILD_SHELL)
    add_subdirectory(shell)
    add_subdirectory(shell/extensions)
endif()

# First-run desktop tools and app GUIs for distro-provided window managers.
if(BUILD_APPS)
    add_subdirectory(apps/app-cli)
    add_subdirectory(apps/terminal)
    add_subdirectory(apps/file_manager)
    add_subdirectory(apps/system_monitor)
    add_subdirectory(apps/settings)
    add_subdirectory(apps/oobe)
    add_subdirectory(apps/wizard)
    if(NOT STRAYLIGHT_BUILD_DESKTOP_ONLY)
        add_subdirectory(apps/greeter)
    endif()
    add_subdirectory(apps/widgets)
    add_subdirectory(apps/audio-gui)
    add_subdirectory(apps/audio_mixer)
    add_subdirectory(apps/bench-gui)
    add_subdirectory(apps/boot-gui)
    add_subdirectory(apps/color-gui)
    add_subdirectory(apps/cron-gui)
    add_subdirectory(apps/disk-gui)
    add_subdirectory(apps/display-gui)
    add_subdirectory(apps/fabric-gui)
    add_subdirectory(apps/flux-gui)
    add_subdirectory(apps/font-gui)
    add_subdirectory(apps/health-gui)
    add_subdirectory(apps/hub)
    add_subdirectory(apps/input-gui)
    add_subdirectory(apps/intent-gui)
    add_subdirectory(apps/log-gui)
    add_subdirectory(apps/mesh-gui)
    add_subdirectory(apps/migrate-gui)
    add_subdirectory(apps/morph-gui)
    add_subdirectory(apps/network-gui)
    add_subdirectory(apps/notify-gui)
    add_subdirectory(apps/photonics-gui)
    add_subdirectory(apps/pmem-gui)
    add_subdirectory(apps/policy-gui)
    add_subdirectory(apps/power-gui)
    add_subdirectory(apps/predict-gui)
    add_subdirectory(apps/probe-gui)
    add_subdirectory(apps/quantum-gui)
    add_subdirectory(apps/replay-gui)
    add_subdirectory(apps/rewind-gui)
    add_subdirectory(apps/rhem-gui)
    add_subdirectory(apps/sandbox-gui)
    add_subdirectory(apps/shield-gui)
    add_subdirectory(apps/snapshot-gui)
    add_subdirectory(apps/snn-gui)
    add_subdirectory(apps/update-gui)
    add_subdirectory(apps/users-gui)
    add_subdirectory(apps/vault-gui)
endif()

if(STRAYLIGHT_BUILD_DESKTOP_ONLY)
    add_subdirectory(services/firstboot)
endif()

# Tests
if(BUILD_TESTS)
    enable_testing()
    add_subdirectory(tests)
endif()

if(STRAYLIGHT_BUILD_LIBS_ONLY OR NOT STRAYLIGHT_PACKAGE_COMPONENT_BUILD)
    install(EXPORT StraylightTargets
        FILE StraylightTargets.cmake
        NAMESPACE straylight::
        DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/straylight
    )
endif()

# Status
message(STATUS "========================================")
message(STATUS "StrayLight OS v${PROJECT_VERSION}")
message(STATUS "========================================")
message(STATUS "  C++ Standard:  ${CMAKE_CXX_STANDARD}")
message(STATUS "  Build type:    ${CMAKE_BUILD_TYPE}")
message(STATUS "  Tests:         ${BUILD_TESTS}")
message(STATUS "  Compositor:    ${BUILD_COMPOSITOR}")
message(STATUS "  Shell:         ${BUILD_SHELL}")
message(STATUS "  Apps:          ${BUILD_APPS}")
message(STATUS "  Subsystems:    ${BUILD_SUBSYSTEMS}")
message(STATUS "  Package libs:  ${STRAYLIGHT_BUILD_LIBS_ONLY}")
message(STATUS "========================================")
